# django-litestream

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  justfile  pyproject.toml  test.restored
.github/workflows/: ci.yml  publish.yml  test-platforms.yml  update-litestream.yml
demo/: db.sqlite3  litestream.yml  manage.py
demo/.db.sqlite3-litestream/: generation
demo/.db.sqlite3-litestream/generations/2c262fb79daf7021/wal/: 00000004.wal  00000005.wal
demo/.db.sqlite3-litestream/generations/48f6afeed8cf30af/wal/: 00000000.wal
demo/.db.sqlite3-litestream/generations/af1173902a2af0e6/wal/: 00000000.wal
demo/.db.sqlite3-litestream/generations/c8ed990baf17c53d/wal/: 00000000.wal
demo/demo/: settings.py  urls.py  wsgi.py
django_litestream_vfs/: pyproject.toml
django_litestream_vfs/src/django_litestream_vfs/: __init__.py  apps.py  conf.py  loader.py
django_litestream_vfs/src/django_litestream_vfs/backends/: sqlite_vfs.py
django_litestream_vfs/src/django_litestream_vfs/backends/sqlite_vfs/: __init__.py  base.py
docs/: advanced.rst  commands.rst  conf.py  configuration.rst  index.rst  installation.rst  requirements.txt  vfs.rst
scripts/: build_binaries.py
src/django_litestream/: __about__.py  __init__.py  apps.py  conf.py  vfs.py
src/django_litestream/db/: routers.py
src/django_litestream/db/backends/: sqlite_vfs.py
src/django_litestream/management/: __init__.py
src/django_litestream/management/commands/: litestream.py
src/django_litestream_vfs/: pyproject.toml
src/django_litestream_vfs/src/django_litestream_vfs/: __init__.py  conf.py  loader.py
src/django_litestream_vfs/src/django_litestream_vfs/backends/: sqlite_vfs.py
tests/: conftest.py  test_litestream.py  test_vfs.py
