[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.7,<0.10" ]

[project]
name = "django-litestream-vfs"
version = "0.5.10"
description = "Litestream VFS SQLite extension for django-litestream read-replica support"
license = "MIT"
requires-python = ">=3.12"

dependencies = [ "django-litestream==0.5.10" ]
