[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.7,<0.10" ]

[project]
name = "django-litestream-vfs"
version = "0.5.14"
description = "Litestream VFS SQLite extension for django-litestream read-replica support"
license = "MIT"
requires-python = ">=3.12"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "django-litestream~=0.5.14"" ]
